--- a/aboutus.html
+++ b/aboutus.html
@@ -1,15 +1,14 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Coco</title>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
-<h1>HOME</h1>
+<h1>About Us</h1>
 <h2>This is the middle</h2>
 <h3>This is the end</h3>
+<a href="index.html">Home</a>
 
-<a href="aboutus.html">About Us</a>
- 
 </body>
 </html>
